# purchase-predict

purchase-predict/: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  install.sh  pyproject.toml  pytest_1.py  pytest_2.py  requirements.txt
purchase-predict/conf/: logging.yml
purchase-predict/conf/base/: catalog.yml  parameters.yml  parameters_deployment.yml  parameters_loading.yml  parameters_training.yml
purchase-predict/docs/source/: conf.py
purchase-predict/lint/: black_1.py  black_2.py  flake8_1.py  flake8_2.py
purchase-predict/src/purchase_predict/: __init__.py  __main__.py  settings.py
purchase-predict/src/purchase_predict/pipelines/deployment/: __init__.py  nodes.py  pipeline.py
purchase-predict/src/purchase_predict/pipelines/loading/: __init__.py  nodes.py  pipeline.py
purchase-predict/src/purchase_predict/pipelines/processing/: nodes.py  pipeline.py
purchase-predict/src/purchase_predict/pipelines/training/: __init__.py  nodes.py  pipeline.py
purchase-predict/tests/pipelines/deployment/: test_pipeline.py
purchase-predict/tests/pipelines/loading/: conftest.py  test_nodes.py  test_pipeline.py
purchase-predict/tests/pipelines/processing/: conftest.py  test_nodes.py  test_pipeline.py
purchase-predict/tests/pipelines/training/: __init__.py  test_model.py  test_pipeline.py
